Fixed navigation spacing

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   height: 100%;
-  padding:  20px;
+  padding:  20px 0;
 }
 
 @media (max-width: 800px){
